--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,10 +1,12 @@
-mat-toolbar {
+.full-width-toolbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   z-index: 1;
   border-bottom: #fff solid 1px;
   background-color: #fff;
   box-shadow: 0 4px 2px -2px #c8cbd6;
+  width: 100%;
 }
 
 .header-logo {
@@ -20,7 +22,8 @@ mat-toolbar {
   display: flex;
   flex-direction: row;
   width: 700px;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .header-nav nav button {
@@ -30,17 +33,52 @@ mat-toolbar {
   color: #1a2744;
 }
 
-  .scroll {
-    display: block;
-  }
+.scroll {
+  display: block;
+}
 
-/* Estilos para telas pequenas (dispositivos móveis) */
-@media screen and (max-width: 767px) {
+@media screen and ( max-width: 1050px) {
   .header-logo {
     display: none;
   }
 
+  .header-nav {
+    width: auto;
+    text-align: center;
+  }
+  
   .header-nav nav button {
-    font-size: medium;
+    font-size: 16px;
+  }
+
+  .header-nav nav button:not(:last-child) {
+    margin-bottom: 8px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header-logo {
+    display: none;
+  }
+
+  .header-nav {
+    width: auto;
+  }
+
+  .header-nav nav button {
+    font-size: 9px;
+  }
+  
+  .header-logo {
+      text-align: center;
+  }
+
+  .header-nav {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .header-nav nav button:not(:last-child) {
+    margin-bottom: 10px;
   }
 }
