--- a/src/app/pages/sobre/sobre.component.css
+++ b/src/app/pages/sobre/sobre.component.css
@@ -4,6 +4,7 @@
     width: 100%;
     justify-content: space-evenly;
     flex-direction: row;
+    align-items: center;
 }
 
 .sobre-perfil {
@@ -52,7 +53,7 @@
     margin-top: 20px;
     flex-direction: column;
     border-radius: 10px;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
     box-shadow: 3px 4px 3px 3px #50E3C2;
     border: #c8cbd6 solid 1px;
     width: 60%;
@@ -85,13 +86,32 @@
     .sobre-descricao {
         width: 85%;
         height: 90%;
-        margin: 10px 0 30px 20px;
+        margin: 10px 20px 30px 30px;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .sobre-perfil {
-        padding-top: 30px;
+    .sobre {
         flex-direction: column;
+        justify-content: center;
+        height: auto;
+        width: 100%;
+    }
+
+    .sobre-perfil {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .sobre-perfil-div1,
+    .sobre-perfil-div2 {
+        margin-top: 20px;
+    }
+
+    .sobre-descricao {
+        width: 80%;
+        height: 90%;
     }
 }
