style: responsive skills

--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,5 +1,5 @@
 <div class="skill">
-    <div>
+    <div class="skill-box">
         <h2>Linguagens</h2>
         <div class="main">
             <div class="box">
@@ -24,7 +24,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="skill-box">
         <h2>Front-End</h2>
         <div class="main">
             <div class="box">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="skill-box">
         <h2>Back-End</h2>
         <div class="main">
             <div class="box">
@@ -109,7 +109,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="skill-box">
         <h2>Testing</h2>
         <div class="main">
             <div class="box">
