--- a/src/app/pages/skills/skills.component.css
+++ b/src/app/pages/skills/skills.component.css
@@ -1,24 +1,31 @@
-.skill {
-    position: absolute;
-    left: 60px;
-    z-index: -1;
-    width: 100%;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-.main{
-    width: 90%;
-    height: auto;
+.skill-box {
+    margin: 20px;
+}
+
+h2 {
+    display: block;
+    font-size: 30px;
+    position: relative;
+    padding: 40px 30px 30px 80px;
+    color: #1a2744;
+    z-index: 0;
+    opacity: 1;
+}
+
+.main {
     display: flex;
-    padding-left: 50px;
-    padding-right: 50px;
-    gap: 2rem;
-    justify-content: flex-start;
-    align-content: flex-start;
-    z-index: -1;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    gap: 2rem;
 }
 
-.box{
+.box {
     width: 12rem;
     height: 10rem;
     border-radius: 25px;
@@ -43,11 +50,6 @@
     z-index: 1;
 }
 
-.box h4 {
-    z-index: 1;
-    color: #1a2744;
-}
-
 .box span::before{
     content: "";
     position: absolute;
@@ -56,7 +58,6 @@
     left: 4.5rem;
     top: -40%;
     background-color: #0FFA7D;
-    /* background: linear-gradient(170deg,#0FFA7D 0%,#0FF2FA 100%); */
     animation: 6s linear 0s infinite normal none running anim;
     border-radius: 10px;
 }
@@ -69,33 +70,18 @@
     border-radius: 20px;
 }
 
+.box h4 {
+    z-index: 1;
+    color: #1a2744;
+}
+
 @keyframes anim{
     0%{transform: rotate(0deg);}
     100%{transform: rotate(360deg);}
 }
 
-h2 {
-    display: block;
-    font-size: 30px;
-    position: relative;
-    padding: 30px 0 10px 30px;
-    color: #1a2744;
-    z-index: 0;
-    opacity: 1;
-}
-
-h1 {
-    display: flex;
-    justify-content: center;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    position: relative;
-    font-size: 2.2rem;
-    font-weight: 800;
-    margin: 2rem 0px;
-    color: #50E3C2;
+@media (max-width: 850px) {
+    .main {
+        gap: 1rem;
+    }
 }
