style: responsive experience

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer-container">
     <div class="footer-icons">
         <a href="mailto:priscilasartori2@gmail.com">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
