--- a/src/app/pages/sobre/sobre.component.css
+++ b/src/app/pages/sobre/sobre.component.css
@@ -1,6 +1,6 @@
 .sobre{
     display: flex;
-    height: 100%;
+    height: auto;
     width: 100%;
     justify-content: space-evenly;
     flex-direction: row;
@@ -72,6 +72,7 @@
         justify-content: center;
         height: auto;
         width: auto;
+        margin-bottom: 100px;
     }
 
     .sobre-perfil {
