--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,14 @@
-/* .header {
-  position: fixed; 
-  width: 100%; 
-  z-index: 1;
-  height: 20%;
-} */
-
 .container {
-  overflow-y: auto; /* Permitir rolagem vertical quando o conteúdo ultrapassar a altura */
+  overflow-y: auto;
   position: fixed;
   height: 83%;
   width: 100%;
-  /* top: 12%; */
 }
 
 .footer { 
-  height: 5%;
+  height: auto;
   position: fixed;
   width: 100%;
   bottom: 0;
-  padding-bottom: 20px;
+  /* padding: 10px; */
 } 
