--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,11 +1,11 @@
-.footer {
+.footer-container {
     display: flex;
     flex-direction: row;
     color: #1a2744;
     background-color: #fff;
     justify-content: space-evenly;
-    height: 50px;
     align-items: center;
+    /* padding: 10px; */
 }
 
 .footer-icons {
@@ -20,14 +20,28 @@
     color: #50E3C2;
 }
 
-.footer p {
+.footer-container p {
     padding-top: 15px;
 }
 
-.footer button {
+.footer-container button {
     background-color: transparent;
     border: none;
     color: #1a2744;
     padding: 0;
     font-size: medium;
+}
+
+@media (max-width: 560px) {
+    .footer-container {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      height: auto;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      /* padding: 10px; */
+    }
 }
