--- a/src/app/pages/experiencia/experiencia.component.css
+++ b/src/app/pages/experiencia/experiencia.component.css
@@ -32,10 +32,17 @@
     flex: 4;
 }
 
+@media screen and (max-width: 600px) {
+    .experiences {
+        margin-bottom: 100px;
+    }
+}
+
 @media (max-width: 440px) {
     .experiences {
         display: flex;
         flex-direction: column;
+        padding-bottom: 100px;
     }
 
     .experience {
