--- a/src/app/pages/education/education.component.css
+++ b/src/app/pages/education/education.component.css
@@ -1,3 +1,7 @@
+body {
+    font-size: 16px;
+}
+
 .educations {
     width: 100%;
     height: 100%;
@@ -9,30 +13,34 @@
 .education {
     display: flex;
     flex-direction: column;
-    padding: 20px 0 0 40px;
+    padding: 20px 0 0 25px;
+    flex: 1;
 }
 
 .education button {
-    width: 200px;
+    min-width: 75px;
+    width: 100%;
     height: 70px;
     background-color: #50E3C2;
     border: none;
     margin: 5px 10px 5px 0px;
-    color: #1a2744;
+    padding: 10px;
     box-shadow: 1px 1px 1px 1px;
 }
 
 .education-info {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 90%;
+    height: auto;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-left: 30px;
+    flex: 4;
 }
 
-/* Estilos para telas pequenas (dispositivos móveis) */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
     .educations {
         flex-direction: column;
+        margin-bottom: 100px;
     }
 
     .education {
@@ -40,7 +48,30 @@
     }
 
     .education-info {
-        margin: 10px 0 0 20px;
+        margin: 50px 0 0 20px;
         justify-content: start;
+    }
+}
+
+@media (max-width: 440px) {
+    .educations {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 100px;
+    }
+
+    .education {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;   
+        margin-bottom: 20px; 
+    }
+
+    .education button {
+        width: 40%;
+    }
+
+    .education-info {
+        padding-left: 15px;
     }
 }
