--- a/src/app/components/educations/educations.component.css
+++ b/src/app/components/educations/educations.component.css
@@ -11,7 +11,6 @@
     box-sizing: border-box;
     background-color: #fff;
     display: flex;
-    /* flex-direction: row; */
     flex-direction: column;
     margin: 10px 0 50px 0;
     border-radius: 10px;
@@ -26,11 +25,8 @@
 
 .card-education header {
     display: flex;
-    /* flex-direction: column; */
     flex-direction: row;
-    /* justify-content: flex-start; */
     justify-content: space-between;
-    /* margin-right: 20px; */
 }
 
 .pdf-iframe {
@@ -42,11 +38,10 @@
 }
 
 .pdf-iframe:hover {
-    transform: scale(2.0);
+    transform: scale(2.3);
     position: absolute;
-    top: 18px;
     z-index: 1;
-    padding-left: 0;
+    display: flex;
 }
 
 .card-sabios-description {
@@ -68,6 +63,17 @@
     border: none;
     margin: 3px;
     box-shadow: 1px 1px 1px 1px;
+}
+
+.habilidades {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.habilidades li {
+    width: 30%;
 }
 
 @media screen and (max-width: 800px) {
