feat: Atualizar curriculo

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -22,5 +22,5 @@
         </a>
     </div>
     <p> © 2023 | Priscila Sartori</p>
-    <button type="button"><a href="../../../assets/D-PRISCILA ROCHA SARTORI.pdf">Baixar Resumo</a></button>
+    <button type="button"><a href="../../../assets/Priscila Sartori   (Desenvolvedora Fullstack).pdf">Baixar Resumo</a></button>
 </div>
