--- a/src/app/pages/formacao/formacao.component.html
+++ b/src/app/pages/formacao/formacao.component.html
@@ -1,5 +1,8 @@
 <section class="educations">
     <div class="education">
+        <button type="button" (click)="changeEducation($event)" value="Ciência da Computação">
+            Ciência da Computação
+        </button>
         <button type="button" (click)="changeEducation($event)" value="Ciências Econômicas">
             Ciências Econômicas
         </button>
