feat: inclusão do projeto Jornada do heroi 2.0

--- a/src/app/pages/projetos/projetos.component.html
+++ b/src/app/pages/projetos/projetos.component.html
@@ -23,7 +23,9 @@
                     <h3>{{project.name}}</h3>
                     <div class="iconeProjeto">
                         <div *ngFor="let icone of project.icones">
-                            <img class="icone" src="{{icone}}"/> 
+                            <span class="icone-container" title="{{ obterNomeIcone(icone) }}">
+                                <img class="icone" src="{{icone}}" alt="Ícone"/>
+                            </span>
                         </div> 
                     </div> 
                 </div> 
