--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Olá, meu nome é</h1>
         <h1>Priscila Sartori</h1>
         <h2>
-            {{ partialWord }}
+            Desenvolvedora {{ partialWord }}
             <span class="cursor" [ngClass]="{ 'blink': partialWord.length === 0 }"></span>
         </h2>
     </div>
