--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -34,6 +34,7 @@
 
 @media (max-width: 560px) {
     .footer-container {
+      width: auto;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
@@ -42,6 +43,6 @@
       bottom: 0;
       left: 0;
       right: 0;
-      /* padding: 10px; */
+      margin-bottom: 30px;
     }
 }
