--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -18,19 +18,63 @@
   color:#50E3C2;
 }
 
-.header-nav {
+nav {
+  position: relative;
+  width: 900px;
+  height: 50px;
+  border-radius: 8px;
   display: flex;
-  flex-direction: row;
-  width: 700px;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
 }
 
-.header-nav nav button {
-  background-color: transparent;
-  border: none;
-  font: 20px Poppins,sans-serif;
+nav a {
+  position: relative;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 500;
   color: #1a2744;
+  text-decoration: none;
+  padding: 0 23px;
+  z-index: 1;
+}
+
+.header-nav-span {
+  position: absolute;
+  top: 0;
+  left: 60px;
+  width: 95px;
+  height: 100%;
+  background-color: #50E3C2;
+  border-radius: 8px;
+  transition: .5s;
+}
+
+nav a:nth-child(1):hover~span {
+  left: 60px;
+}
+
+nav a:nth-child(2):hover~span {
+  left: 160px;
+}
+
+nav a:nth-child(3):hover~span {
+  left: 270px;
+  width: 130px;
+}
+
+nav a:nth-child(4):hover~span {
+  left: 430px;
+  width: 130px;
+}
+
+nav a:nth-child(5):hover~span {
+  left: 590px;
+  width: 110px;
+}
+
+nav a:nth-child(6):hover~span {
+  left: 730px;
 }
 
 .scroll {
@@ -38,47 +82,51 @@
 }
 
 @media screen and ( max-width: 1050px) {
+  .full-width-toolbar {
+    width: 900px;
+  }
+
   .header-logo {
     display: none;
   }
 
   .header-nav {
-    width: auto;
+    width: 100%;
     text-align: center;
   }
   
-  .header-nav nav button {
+  .header-nav nav a {
     font-size: 16px;
+    position: relative;
   }
 
-  .header-nav nav button:not(:last-child) {
+  .header-nav nav a:not(:last-child) {
     margin-bottom: 8px;
+  }
+
+  .header-nav-span {
+    display: none;
+  }
+
+  nav a :hover {
+    background-color: #50E3C2;
+    color: #fff;
   }
 }
 
 @media only screen and (max-width: 600px) {
   .header-logo {
     display: none;
+    text-align: center;
   }
 
   .header-nav {
     width: auto;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .header-nav nav button {
-    font-size: 9px;
-  }
-  
-  .header-logo {
-      text-align: center;
-  }
-
-  .header-nav {
-      flex-direction: column;
-      align-items: center;
-  }
-
-  .header-nav nav button:not(:last-child) {
+  nav a:not(:last-child) {
     margin-bottom: 10px;
   }
 }
