--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,13 +5,14 @@
         <span> /> </span>
     </div>
     <div class="header-nav" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-        <nav> 
-            <button mat-menu-item (click)="changeHome()">Home</button>
-            <button mat-menu-item (click)="changeAbout()">Sobre</button>
-            <button mat-menu-item (click)="changeSkills()">Habilidades</button>
-            <button mat-menu-item (click)="changeExperiences()">Experiencias</button>
-            <button mat-menu-item (click)="changeEducation()">Formação</button>
-            <button mat-menu-item (click)="changeProjects()">Projetos</button>
+        <nav>
+            <a href="">Home</a>
+            <a href="/about">Sobre</a>
+            <a href="/skills">Habilidades</a>
+            <a href="/experience">Experiências</a>
+            <a href="/education">Formação</a>
+            <a href="/projects">Projetos</a>
+            <span class="header-nav-span"></span>
         </nav>
         <!-- <div>
             <label class="switch">
@@ -20,6 +21,6 @@
                 <mat-icon class="iconDark" *ngIf="!theme">dark_mode</mat-icon>
                 <mat-icon class="iconLigth" *ngIf="theme">light_mode</mat-icon>
             </label>
-        </div> -->
+        </div>  -->
     </div> 
 </mat-toolbar>
