fix: click btn experiencia

--- a/src/app/pages/experiencia/experiencia.component.html
+++ b/src/app/pages/experiencia/experiencia.component.html
@@ -1,6 +1,6 @@
 <section class="experiences">
     <div class="experience">
-        <button type="button" (click)="changeExperience($event)">
+        <button type="button" (click)="changeExperience($event)" value="Sabios">
             Sabios Inovação
         </button>
     </div>
