--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -42,39 +42,12 @@ nav a {
 .header-nav-span {
   position: absolute;
   top: 0;
-  left: 60px;
+  /* left: 60px; */
   width: 95px;
   height: 100%;
   background-color: #50E3C2;
   border-radius: 8px;
   transition: .5s;
-}
-
-nav a:nth-child(1):hover~span {
-  left: 60px;
-}
-
-nav a:nth-child(2):hover~span {
-  left: 160px;
-}
-
-nav a:nth-child(3):hover~span {
-  left: 270px;
-  width: 130px;
-}
-
-nav a:nth-child(4):hover~span {
-  left: 430px;
-  width: 130px;
-}
-
-nav a:nth-child(5):hover~span {
-  left: 590px;
-  width: 110px;
-}
-
-nav a:nth-child(6):hover~span {
-  left: 730px;
 }
 
 .scroll {
