fix: card experiência

--- a/src/app/components/experience/sabios/sabios.component.html
+++ b/src/app/components/experience/sabios/sabios.component.html
@@ -1,22 +1,20 @@
-<section class="sabios">
-    <div class="card-sabios">
-        <header>
-            <img src="https://media.licdn.com/dms/image/C4E0BAQFE7ztr5OmljA/company-logo_100_100/0/1580931166256/sabiaexperience_logo?e=1703721600&v=beta&t=-YlHR8IbHwe29LRkbeOszXqH5yZIZJOxIsJyZM0y02E" alt="Logo Sabios">
-            <div class="card-sabios-info">
-                <h1>Sabios Inovação</h1>
-                <p>Desenvolvedora de Software</p>
-                <p>Desde Agosto de 2023</p>
-            </div>
-        </header>
-        <div class="card-sabios-description">
-            <p>Atuação com PJ na EdTech com foco em realização do mapeamento e diagnóstico para transformação do site, criação de novas telas utilizando AngulaJS, TypeScript, mensageria e desenvolvimento de formulários com Reactive Forms.</p>
-        </div>
-        <div class="card-sabios-techs">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" title="AngularJS" width="50px"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" title="Javascript" width="50px"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" title="HTML" width="50px"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" title="CSS" width="50px"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original.svg" title="Jquery" width="50px"/>
-        </div>
+<section>
+  <div class="card-sabios">
+    <img width="100px" src="https://media.licdn.com/dms/image/C4E0BAQFE7ztr5OmljA/company-logo_200_200/0/1630566063105/sabiaexperience_logo?e=2147483647&v=beta&t=6E39Xvy3P3rID2_ulHHc21YjuA4BWOOCABjBOJ9wYRM" alt="Logo Sabios">
+    <div>
+      <h1>Sabios Inovação</h1>
+      <p>Desenvolvedora de Software</p>
+      <p>De Agosto de 2023 a Outubro 2023 - Temporário</p>
     </div>
+    <div>
+      <p>Atuação com PJ na EdTech com foco em realização do mapeamento e diagnóstico para transformação do site, criação de novas telas utilizando AngulaJS, TypeScript, mensageria e desenvolvimento de formulários com Reactive Forms.</p>
+    </div>
+    <div>
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" title="AngularJS" width="50px"/>
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" title="Javascript" width="50px"/>
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" title="HTML" width="50px"/>
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" title="CSS" width="50px"/>
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original.svg" title="Jquery" width="50px"/>
+    </div>
+  </div>
 </section>
