--- a/src/app/pages/experiencia/experiencia.component.css
+++ b/src/app/pages/experiencia/experiencia.component.css
@@ -27,7 +27,7 @@
 .experience-info {
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex: 4;
 }
