--- a/src/app/components/experience/sabios/sabios.component.css
+++ b/src/app/components/experience/sabios/sabios.component.css
@@ -1,7 +1,5 @@
-.sabios {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
+section {
+    margin: 20px 70px;
 }
 
 .card-sabios {
@@ -9,77 +7,11 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    min-height: 360px;
+    justify-content: space-around;
+    width: 95%;
+    min-height: 480px;
     border-radius: 10px;
-    padding: 30px;
+    padding: 50px;
     box-shadow: 3px 4px 3px 3px #50E3C2;
     border: #c8cbd6 solid 1px;
-}
-
-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.card-sabios-info {
-    flex: 1;
-    padding-right: 10px;
-    color: #50E3C2;
-    margin-left: 20px;
-}
-
-header img {
-    max-width: 100%;
-    height: auto;
-}
-
-.card-sabios-description {
-    width: 100%;
-    margin: 30px 0 20px 0;
-    color: #1a2744;
-}
-
-.card-sabios-techs {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    gap: 1rem;
-}
-
-@media (max-width: 523px) {
-    .card-sabios {
-        padding: 20px;
-    }
-
-    .card-sabios-info {
-        font-size: small;
-    }
-
-    .card-sabios-techs img {
-        width: 30px;
-    }
-
-    h1 {
-        font-size: large;
-        margin: 0;
-    }
-
-    .card-sabios-info p {
-        margin: 0;
-    }
-}
-
-
-@media (max-width: 440px) {
-    header {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .sabios {
-        margin-bottom: 30px;
-    }
 }
